ECMS-1412 remove jboss profile